# codingame

./: .gitignore  .gitmodules  codingame_cli.py  pyproject.toml  requirements.txt
fall_challenge_2022/: CMakeLists.txt
fall_challenge_2022/include/fall_challenge_2022/: Cell.h  Map.h  Player.h  State.h  Unit.h
fall_challenge_2022/src/fall_challenge_2022/: Cell.cpp  Map.cpp  State.cpp  Unit.cpp  main.cpp
fall_challenge_2022/test/fall_challenge_2022/: test_map.cpp  test_sample.cpp
fall_challenge_2023/: wood2.py
keep_off_the_grass/: CMakeLists.txt
keep_off_the_grass/include/keep_off_the_grass/action/: Action.h  Build.h  Message.h  Move.h  Spawn.h  Wait.h
keep_off_the_grass/include/keep_off_the_grass/bot/: Bot.h  WaitBot.h  WoodBot.h
keep_off_the_grass/include/keep_off_the_grass/map/: Cell.h  Direction.h  Map.h  ScoredMap.h
keep_off_the_grass/include/keep_off_the_grass/player/: Player.h
keep_off_the_grass/include/keep_off_the_grass/state/: State.h
keep_off_the_grass/src/keep_off_the_grass/: main.cpp
keep_off_the_grass/src/keep_off_the_grass/action/: Action.cpp  Build.cpp  Message.cpp  Move.cpp  Spawn.cpp  Wait.cpp
keep_off_the_grass/src/keep_off_the_grass/bot/: Bot.cpp  WaitBot.cpp  WoodBot.cpp
keep_off_the_grass/src/keep_off_the_grass/map/: Cell.cpp  Map.cpp  ScoredMap.cpp
keep_off_the_grass/src/keep_off_the_grass/player/: Player.cpp
keep_off_the_grass/src/keep_off_the_grass/state/: State.cpp
keep_off_the_grass/test/keep_off_the_grass/map/: test_Map.cpp  test_ScoredMap.cpp
olymbits/: CMakeLists.txt  wood1.py  wood2.py
olymbits/include/olymbits/action/: Action.h
olymbits/include/olymbits/bot/: ArcheryBot.h  Bot.h  DivingBot.h  HeuristicBot.h  HurdleRaceBot.h  MCTSBot.h  RandomBot.h  RollerSpeedSkatingBot.h
olymbits/include/olymbits/mcts/: MCTS.h  Node.h  NodePool.h
olymbits/include/olymbits/mini_game/: Archery.h  Diving.h  HurdleRace.h  MiniGame.h  MiniGamePool.h  RollerSpeedSkating.h
olymbits/include/olymbits/score_board/: ScoreBoard.h
olymbits/include/olymbits/state/: State.h
olymbits/include/olymbits/tools/: distance.h
olymbits/src/olymbits/: main.cpp
olymbits/src/olymbits/action/: Action.cpp
olymbits/src/olymbits/bot/: ArcheryBot.cpp  Bot.cpp  DivingBot.cpp  HeuristicBot.cpp  HurdleRaceBot.cpp  MCTSBot.cpp  RandomBot.cpp  RollerSpeedSkatingBot.cpp
olymbits/src/olymbits/mcts/: MCTS.cpp  Node.cpp  NodePool.cpp
olymbits/src/olymbits/mini_game/: Archery.cpp  Diving.cpp  HurdleRace.cpp  MiniGame.cpp  MiniGamePool.cpp  RollerSpeedSkating.cpp
olymbits/src/olymbits/score_board/: ScoreBoard.cpp
olymbits/src/olymbits/state/: State.cpp
olymbits/src/olymbits/tools/: distance.cpp
olymbits/test/: truc.cpp
olymbits/test/olymbits/mini_game/: TestArchery.cpp  TestMiniGame.cpp
snakebyte/: rules.md
snakebyte/snakerust/: Cargo.toml
snakebyte/snakerust/src/: action.rs  bitboard.rs  lib.rs  main.rs  mcts.rs  parameters.rs  snake.rs  state.rs  zobrist.rs
soak_overflow/: CMakeLists.txt  wood1.py  wood2.py  wood3.py  wood4.py
soak_overflow/include/soak_overflow/action/: Combat.h  Move.h  Shoot.h  Throw.h
soak_overflow/include/soak_overflow/agent/: Agent.h  AgentCollection.h  AgentData.h  AgentDataCollection.h
soak_overflow/include/soak_overflow/grid/: Cell.h  CellType.h  Coord.h  Direction.h  Grid.h
soak_overflow/include/soak_overflow/profiler/: Profiler.h  ProfilerData.h
soak_overflow/include/soak_overflow/random/: Random.h
soak_overflow/include/soak_overflow/state/: Simulator.h  State.h
soak_overflow/soak_overflow_rust/: Cargo.toml  rules.md
soak_overflow/soak_overflow_rust/src/: agent.rs  agent_data.rs  bitboard.rs  direction.rs  lib.rs  parameters.rs  state.rs
soak_overflow/soak_overflow_rust/tests/: agent_data_test.rs  agent_test.rs  bitboard_test.rs  direction_test.rs  parameters_test.rs  state_tests.rs
soak_overflow/src/soak_overflow/: main.cpp
soak_overflow/src/soak_overflow/action/: Combat.cpp  Move.cpp  Shoot.cpp  Throw.cpp
soak_overflow/src/soak_overflow/agent/: Agent.cpp  AgentCollection.cpp  AgentData.cpp  AgentDataCollection.cpp
soak_overflow/src/soak_overflow/grid/: Cell.cpp  CellType.cpp  Coord.cpp  Direction.cpp  Grid.cpp
soak_overflow/src/soak_overflow/profiler/: Profiler.cpp  ProfilerData.cpp
soak_overflow/src/soak_overflow/random/: Random.cpp
soak_overflow/src/soak_overflow/state/: Simulator.cpp  State.cpp
soak_overflow/test/soak_overflow/action/: TestCombat.cpp  TestMove.cpp  TestShoot.cpp  TestThrow.cpp
soak_overflow/test/soak_overflow/agent/: TestAgent.cpp  TestAgentCollection.cpp  TestAgentData.cpp  TestAgentDataCollection.cpp
soak_overflow/test/soak_overflow/grid/: TestCell.cpp  TestCoord.cpp  TestDirection.cpp  TestGrid.cpp
soak_overflow/test/soak_overflow/random/: TestRandom.cpp
soak_overflow/test/soak_overflow/state/: TestSimulator.cpp  TestState.cpp
spring_challenge_2023/: wood2.py
src/codingame/: __main__.py
